tests/NormalTests/paczka1/fuzzy1/36979080.err
Error in line 3: A159 S481 100,0
Error in line 7: cCpMIf3v S481 62,1
Error in line 11: zMKvOvqE5Zs S548 51,6
